# geometric-v1

./: .gitignore  Agents.md  README.md  batch_brute.json  brute.json  concepts.md  embedding_loss.json  embedding_loss_concepts.md  loss.json  pipeline.json  pyproject.toml  requirements.txt  run_batch_brute_force.py  run_brute_force.py  run_deepface_compare.py  run_deepface_model_check.py  run_diffusion.py  run_embedding_loss_pipeline.py  run_loss_pipeline.py  run_perturbations.py  run_pipeline.py  run_ui.py  torch-backends.md
geometric_v1/: batch_brute_force.py  brute_force.py  config.py  deepface_cli.py  deepface_compare.py  deepface_model_check_cli.py  deepface_worker.py  diffusion.py  diffusion_cli.py  embedding_loss_pipeline.py  events.py  flux_features.py  loss_pipeline.py  operations.py  perturbations_cli.py  pipeline.py  samples.py
geometric_v1/ui/: backend.py  history.py  manager.py  smoke.py
geometric_v1/ui/static/: app.js  index.html  styles.css
linux-gpu/: Readme.md  batch_brute.json  brute.json  constraints-a6000.txt  install_linux_a6000.sh  parameters.md  pipeline.json
sample_jsons/: sample_batch_brute.json  sample_brute.json  sample_embedding_loss.json  sample_loss.json  sample_pipeline.json
src/geometric_v1/: deepface_compare.py  diffusion.py  image_io.py  perturbations.py  pipeline.py
