[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometric-v1"
version = "0.1.0"
description = "Geometric perturbation plus diffusion and DeepFace comparison pipeline."
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.22,<=1.24.3",
  "pillow>=10.0",
  "scipy>=1.10",
  "opencv-python>=4.8,<4.9",
  "opencv-python-headless>=4.8,<4.9",
  "diffusers>=0.35.1",
  "transformers>=4.41",
  "accelerate>=0.30",
  "safetensors>=0.4",
  "requests>=2.32",
  "deepface>=0.0.93",
  "tensorflow==2.12.1",
  "keras==2.12.0",
  "dlib==20.0.1",
  "insightface>=1.0.1",
  "onnxruntime>=1.26",
  "albumentations>=2.0.8",
  "gdown>=6.1",
]

[project.scripts]
geometric-v1 = "geometric_v1.pipeline:main"
geometric-v1-brute-force = "geometric_v1.brute_force:main"

[tool.setuptools.packages.find]
include = ["geometric_v1*"]
